# thingsboard-python-rest-client

./: .gitignore  .travis.yml  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
examples/: __init__.py  api_key_login_example.py  configure_vcs_access.py  example_application.py  example_application_2.py  example_application_controllers_version.py  load_all_entities_from_vcs_ce.py  load_all_entities_from_vcs_pe.py  load_all_entities_to_vcs_ce.py  load_all_entities_to_vcs_pe.py  save_all_entities_to_vcs_ce.py  save_all_entities_to_vcs_pe.py  version_control_complex_example_ce.py  version_control_complex_example_pe.py  version_control_single_device_example_ce.py  version_control_single_device_example_pe.py  watermeters.json
tb_rest_client/: __init__.py  api_client.py  configuration.py  rest.py  rest_client.py  rest_client_base.py  rest_client_ce.py  rest_client_pe.py
tb_rest_client/api/: __init__.py  admin_controller_api.py  alarm_controller_api.py  asset_controller_api.py  audit_log_controller_api.py  auth_controller_api.py  blob_entity_controller_api.py  component_descriptor_controller_api.py  converter_controller_api.py  custom_menu_controller_api.py  custom_translation_controller_api.py  customer_controller_api.py  dashboard_controller_api.py  device_controller_api.py  rpc_controller_api.py  (+28 more)
tb_rest_client32/: __init__.py  api_client.py  configuration.py  rest_client_base.py  rest_client_ce.py  rest_client_pe.py
tb_rest_client_pe/: __init__.py  api_client.py  configuration.py  rest_client.py
test/: __init__.py  tests.py  tests_ce.py  tests_pe.py
(+1781 files in other folders)
