[tool.poetry]
name = "tb-rest-client"
version = "3.9.0"
description = "ThingsBoard REST API client"
authors = ["ThingsBoard <info@thingsboard.io>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://thingsboard.io/docs/reference/python-rest-client/"
repository = "https://github.com/thingsboard/thingsboard-python-rest-client"
documentation = "https://thingsboard.io/docs/reference/python-rest-client/"
keywords = ["tb-python-rest-client", "tb-rest-client"]
maintainers = [
    "Illia Barkov <ibarkov@thingsboard.io>",
    "Vitalii Bidochka <vbidochka@thingsboard.io>"
]

[tool.poetry.dependencies]
python = "^3.9"
certifi = "2023.7.22"
six = "1.10"
python_dateutil = "2.5.3"
setuptools = "21.0.0"
urllib3 = "2.0.7"
requests = "2.31.0"
pyjwt = "2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
